--- a/demo/static/style.css
+++ b/demo/static/style.css
@@ -10,10 +10,12 @@ body {
 	color: #202020;
 	background-color: #e0e0e0;
 	overflow: hidden;
+	display: flex;
+	flex-direction: column;
 }
 
 .feed {
-	height: 100%;
+	flex: 1;
 	overflow-y: auto;
 }
 
