demo/index.html: rename to BubbleBuster

--- a/demo/templates/index.html
+++ b/demo/templates/index.html
@@ -6,7 +6,7 @@
 	<link href="{{ url_for('static', filename='style.css') }}" rel="stylesheet" type="text/css" media="all">
 	<script src="https://unpkg.com/htmx.org@1.9.12"></script>
 	<script src="https://unpkg.com/htmx.org@1.9.12/dist/ext/sse.js"></script>
-	<title>BubbleBurst!</title>
+	<title>BubbleBuster!</title>
 </head>
 <body>
 	<h1>Federated Feed</h1>
